[workspace]
members = [
    "arrays/L0049-group_anagrams", "arrays/L0056-merge_intervals",
    "arrays/L0238-product_of_array_except_self", "backtracking/L0046-permutations",
    "binary_search/L0033-search_in_rotated_sorted_array",
    "binary_search/L0704-binary_search", "design/L0146-lru_cache",
    "hashing/L0001-two_sum",
    "hashing/L0242-valid_anagram", "kth/L0215-kth_largest_element_in_an_array", "kth/L0703-kth_largest_element_in_a_stream",
    "linked_lists/L0002-add_two_numbers", "linked_lists/L0206-reverse_linked_list",
    "sliding_window/L0003-longest_substring_without_repeating_characters",
    "sliding_window/L0395-longest-substring_with_at_least_k_repeating_characters",
    "sliding_window/L0643-maximum_average_subarray_1",
    "stacks/L0020-valid_parentheses",
    "stacks/L0496-next_greater_element_i", "stacks/L0503-next_greater_element_ii",
    "strings/L0013-roman_to_integer", "strings/L0125-valid_palindrome",
    "strings/L0205-isomorphic_strings",
]

resolver = "2"
